5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1723_2502.log
== TEST (2019-05-14 11:00:42) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<fim):
	soma=soma+sqrt(12)*((-1)**1/(2*i+1)*3**i)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
-5759.11576953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:05) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<fim):
	soma=soma+((-1)**1/(2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
-5759.11576953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:43) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<fim):
	soma=soma+((-1)**i/(2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:01:47) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<fim):
	soma=soma+((-1)**i/(2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- EXECUTION TIME:
0.151852
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
-2614.97174629
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
-150468.18534334
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
141.78176858
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:48) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<fim):
	soma=soma+((-1)**i/(2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:46) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<fim):
	soma=soma+(-1)**(1)*1/(2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- ERROR:
File "XXXX", line 7
    soma=soma+(-1)**(1)*1/(2*i+1)*3**i)*sqrt(12)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:57) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<fim):
	soma=soma+(-1)**(1)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
-3.95086967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:03) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=1
i=0
fim=n-1
while(i<fim):
	soma=soma+(-1)**(1)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
-2.95086967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:12) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=32
i=0
fim=n-1
while(i<fim):
	soma=soma+(-1)**(1)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
28.04913033
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:18) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=32
i=0
fim=n-1
while(i<fim):
	soma=soma+(-1)**(1)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
28.04913033
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:21) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=32
i=0
fim=n-1
while(i<fim):
	soma=soma+(-1)**(1)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
28.04913033
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:32) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=1
fim=n-1
while(i<fim):
	soma=soma+(-1)**(1)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
-0.48676805
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:37) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=1
i=1
fim=n-1
while(i<fim):
	soma=soma+(-1)**(1)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
0.51323195
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:54) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<=fim):
	soma=soma+(-1)**(1)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
-3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:08) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<=fim):
	soma=soma+(-1)**(i)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:04:24) 
-- CODE:
from math import*
n = int(input("escreva: "))
soma=0
i=0
fim=n-1
while(i<=fim):
	soma=soma+(-1)**(i)*1/((2*i+1)*3**i)*sqrt(12)
	i=i+1				
print(round(soma, 8))
-- EXECUTION TIME:
0.154585
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
